--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -4,17 +4,19 @@
             .col-lg-6.px-0
                 img(src="/coin-hand.png" alt="aeomo-gradient")
             .col-lg-6.px-0
-                .text-box
-                    h1.f-larger Thousands of DIDs created on the EWC.
-                    article.f-medium Thousands of DIDs created on the EWC.
+                article.mx-5
+                    span.f-medium.mb-3.d-block Capable of generating and <br>ingesting both data and
+                    img(src="/aemo-img-crypto-1.png" alt="")
+            .border-liner
         .row.mb-0.bg.gray
             .col-lg-6.px-0
                 .text-box.flex-no-gaps
-                    article.f-large.t-end This way
-                    article.f-medium.t-end every time the market needs to store electricity in the battery or discharge it to the grid
+                    article.f-large.t-end After EDGE”s trial period
+                    article.f-medium.t-end.mt-3 the architecture has the<br> potential to set a standard for<br> the entire Australian market and<br> the world.
             .col-lg-6.px-0
-                img(src="/hexagon-two.png" alt="hexagon-two").sized-image
-        .row.mb-0.bg.gray
+                img.mx-5(src="/hexagon-two.png" alt="hexagon-two").sized-image
+            .border-liner
+        //--.row.mb-0.bg.gray
             .col-lg-6.px-0
             .col-lg-6.px-0
                 .text-box.to-right
