--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -35,28 +35,23 @@ block App
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-zero I'm helping to decarbonize the grid because my battery is being used to balance the grid-not a fossil-fuel powered plant.
+                  h3.slide-title.s-zero.float-sum-img <span class="img-sum"><img src="/SummaryCard_AEMO.png" alt="" /></span><small>I’m Mark and I live near Brisbane, Australia</small> my batteries and solar system are helping to balance the grid instead of a fossil-fuel <br>powered plant
                   .slide-overlay
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-one Behind the curtain David works for the <u data-bs-toggle="tooltip" data-bs-placement="top" title="Distribution Network System Operator">DNSP</u> and is really happy about Edge
+                  h3.slide-title.s-zero <small>Behind the curtain of project EDGE</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span><span class="img"><img src="/aemo-img-companies-1.png" alt="" /></span></span>  <br>and EDGE is giving <br>her the ability...
                   .slide-overlay
                   img(src="/aemo-companies.png" alt="Companies")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-two For Mark at <u data-bs-toggle="tooltip" data-bs-placement="top" title="Australian Energy Market Operator">AEMO</u> and any other grid operator, it’s the same thing
+                  h3.slide-title.s-zero <small>on the other side of the EDGE marketplace</small> For Molly at <span class="underline aemo-tip"><span>AEMO</span><span class="img"><img src="/aemo-img-companies-2.png" alt="" /></span></span> , she<br> too has a different view of<br> the grid:
                   .slide-overlay
                   img(src="/aemo-enterprise.png" alt="Enterprise")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-three For  the Energy Web community of developers, the EDGE marketplace means that there will be
+                  h3.slide-title.s-zero <small>For the Energy Web Community</small> more and more decentralized identifiers will be anchored to the Energy Web Chain
                   .slide-overlay
                   img(src="/aemo-crypto.png" alt="Crypto")
                 .swiper-slide
-                  h4.slide-subtitle AEMO - Australian Energy Market Operator
-                  h3.slide-title.s-four For the whole world, thanks to the law of small numbers, all of these batteries
+                  h3.slide-title.s-zero <small>For the world</small> all of these batteries, solar systems, <br>and other distributed energy <br>resources
                   .slide-overlay
                   img(src="/aemo-world.png" alt="World")
               .swiper-pagination
