--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -1,25 +1,25 @@
-.container
+.container.world-grey-bg
     .content-wrap.content-4
         .row.mb-0.bg
             .col-lg-6.px-0
-                .text-box(class="decarbonize")
-                    h1.f-medium and other similar Distributed energy <br> Resources (DER)
-                    img(src="/decarbonize.png", alt="decarbonize")
+                article
+                    img(src="/aemo-img-world-1.png" alt="")
             .col-lg-6.px-0.img-center-box
                 img(src="/world-dots.png" alt="worlds")
             .border-liner
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box.world
-                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil fuel based power plants
-            .col-lg-6.px-0
+                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil-fuel based power plants
+            .col-lg-6.px-0.aemo-bg-world-1
                 img(src="/electricity-two.png" alt="electricity-two")
+                img.bg-img(src="/aemo-img-world-2.png" alt="")
 .world-footer
     img(src="/world-footer-aemo.png", alt="world-footer")
     .footer-text
         h1.f-larger.t-center Are you a Grid Operator?
-        h2.f-small.t-center.h-26 Do you need a way to coordinate distributed energy resource behavior across the transmission / distribution interface?  
-        h3.f-medium.t-center.h-42 Learn how you can BUILD a similar solution with the EW Stack.
+        h2.f-small.t-center.h-26.text-gray Do you need a way to coordinate distributed energy <br>resource behavior across the transmission / <br>distribution interface?  
+        h3.f-medium.t-center.h-42 Learn how you can BUILD a similar <br>solution with the EW Stack.
         button
             span Build with us
             img(src="/arrow-right.svg", alt="svg")
