--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -3,18 +3,18 @@
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box.a-center
-                    article.f-large.h-48.block-one-t-one EDGE is giving him the ability to see and interact with assets that she was previously blind to:
+                    article.f-large.h-48.block-one-t-one ...to see and interact with assets that she was previously blind to:
             .col-lg-6.px-0
                 .text-box.a-center 
-                    article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers
+                    article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
         .row.mb-0.gray
             .col-lg-6.px-0
                 img(src="/scooter.png" alt="scooter").block-one-img
             .col-lg-6.px-0
                 .text-box.to-right.flex-no-gaps
                     img(src="/block-two-g-1.png", alt="block-gradient").g-sized
-                    article.f-large Anchored on the<br> <u>Energy Web Chain</u>
-                    article.f-medium.mt-5 We know that we have a battery and where, and we can use it to store or discharge energy to the grid as needed
+                    article.f-large.mt-3 Anchored on the<br> <u>Energy Web Chain</u>
+                    article.f-medium.mt-3 we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box
