--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -3,16 +3,15 @@
         .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box 
-                    article.f-medium.h-42 When a Solar company sold me panels for my house
-                    article.f-medium.h-42 They also sold me a battery. It’s been sitting in my basement for two years not doing a whole lot.
-                    img(src="/aemo-gradient-indis.png" alt="aeomo-gradient")
+                    article.f-medium.h-42 When a solar company sold me panels for my house, they also sold me a battery. It’s been sitting in my basement for two years not doing a whole lot.
+                    img.auto-size(src="/aemo-gradient-indis.png" alt="aeomo-gradient")
             .col-lg-6.px-0
                 img(src="/battaries.png" alt="Battaries")
         .row.mb-0.bg.gray
             .col-lg-6.px-0
                 .text-box
-                    h1.f-medium Different utilities in Australia actually
-                    article.f-larger started to pay me to use my battery at different times of the day
+                    h1.f-medium Now with Project EDGE, My solar system and battery are being used by different utilities to help balance the grid 
+                    article.f-larger And they’re Paying me  to do it!
             .col-lg-6.px-0
                 img(src="/block-one-house.png" alt="house")
         .row.mb-0.bg.col-reversed
@@ -22,4 +21,4 @@
                 .text-box.to-right.s-t-center
                     h1.f-medium and I'm helping to
                     h1.f-large <u>Decarbonize the grid</u>
-                    article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
+                    //--article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
