--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -9,8 +9,8 @@
             .border-liner
         .row.mb-0.bg
             .col-lg-6.px-0
-                .text-box.world
-                    article.f-large.t-start.h-52 Reducing the energy required from centralized fossil-fuel based power plants
+                .text-box.world.gray.mt-5
+                    article.f-large.t-start.h-52.mx-3 Reducing the energy required from centralized fossil-fuel based power plants
             .col-lg-6.px-0.aemo-bg-world-1
                 img(src="/electricity-two.png" alt="electricity-two")
                 img.bg-img(src="/aemo-img-world-2.png" alt="")
