--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -1,21 +1,21 @@
 .container
     .content-wrap.content-1
-        .row.mb-0.bg
+        .row.mb-0.bg.gray.pb-5.pt-5.custom-zindex.num-2
             .col-lg-6.px-0
                 .text-box.a-center
                     article.f-large.h-48.block-one-t-one ...to see and interact with assets that she was previously blind to:
             .col-lg-6.px-0
                 .text-box.a-center 
                     article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
-        .row.mb-0.gray
+        .row.mb-0
             .col-lg-6.px-0
                 img(src="/scooter.png" alt="scooter").block-one-img
             .col-lg-6.px-0
                 .text-box.to-right.flex-no-gaps
                     img(src="/block-two-g-1.png", alt="block-gradient").g-sized
-                    article.f-large.mt-3 Anchored on the<br> <u>Energy Web Chain</u>
-                    article.f-medium.mt-3 we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
-        .row.mb-0.bg
+                    article.f-large.mt-3.mx-3 Anchored on the<br> <u>Energy Web Chain</u>
+                    article.f-medium.mt-3.mx-3 we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
+        .row.mb-0.bg.pt-5
             .col-lg-6.px-0
                 .text-box
                     article.f-medium.t-end Before we were blind, <br> and now we see
@@ -23,3 +23,4 @@
             .col-lg-6.px-0
                 img(src="/aemo-eye.png" alt="aemo-el")(class="large-sc").to-right
                 img(src="/sm-wider-eye.png" alt="aemo-el")(class="small-sc")
+    .border-liner
