--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -8,12 +8,12 @@
                     span.f-medium.mb-3.d-block Capable of generating and <br>ingesting both data and
                     img(src="/aemo-img-crypto-1.png" alt="")
             .border-liner
-        .row.mb-0.bg.gray
+        .row.mb-0.bg
             .col-lg-6.px-0
                 .text-box.flex-no-gaps
                     article.f-large.t-end After EDGE”s trial period
                     article.f-medium.t-end.mt-3 the architecture has the<br> potential to set a standard for<br> the entire Australian market and<br> the world.
-            .col-lg-6.px-0
+            .col-lg-6.px-0.gray.pt-5.pb-5
                 img.mx-5(src="/hexagon-two.png" alt="hexagon-two").sized-image
             .border-liner
         //--.row.mb-0.bg.gray
