--- a/src/views/component/zero/block-two.pug
+++ b/src/views/component/zero/block-two.pug
@@ -18,7 +18,7 @@
                     h1.f-large.t-start Like smart inverters <br>and batteries
                     h1.f-medium.h-48 and insight into how and when they can help make the grid more flexible from the bottom up
         .row.mb-0.bg.col-reversed
-            .col-lg-6.px-0
+            .col-lg-6.px-0.gray
                 .text-box.flex-no-gaps
                     //--article.f-large.t-start This simplifies our lives !
                     h1.f-medium.t-start.h-48.mx-5 This is possible because we and the distribution utilities use common, shared, open source infrastructure rather than each organization using their own siloed systems
