--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -7,7 +7,7 @@
                     img.auto-size(src="/aemo-gradient-indis.png" alt="aeomo-gradient")
             .col-lg-6.px-0
                 img(src="/battaries.png" alt="Battaries")
-        .row.mb-0.bg.gray
+        .row.mb-0.bg.gray.pt-0.mt-5.pb-5.mb-5
             .col-lg-6.px-0
                 .text-box
                     h1.f-medium Now with Project EDGE, My solar system and battery are being used by different utilities to help balance the grid 
