--- a/src/styles/components/_blocks.scss
+++ b/src/styles/components/_blocks.scss
@@ -13,6 +13,23 @@
     background-color:#F8F9FA;
 }
 
+.bg-purple {
+    background: #462e66;
+    height: 700px;
+
+    img {
+        width: 100% !important;
+    }
+
+    @include media('<=phone') {
+        height: 610px;
+    }
+  }
+
+.white {
+    background-color:#FFFFFF;
+}
+
 .border-liner {
     width: 1px;
     position: absolute;
@@ -36,7 +53,7 @@
 .text-box {
     display: flex;
     flex-direction: column;
-    gap: 70px;
+    //  
     height: 100%;
     justify-content: center;
     color: #452E66;
@@ -321,7 +338,7 @@
     .text-box {
         display: flex;
         flex-direction: column;
-        gap: 70px;
+        // gap: 70px;
         height: 100%;
         justify-content: center;
         color: #452E66;
@@ -350,7 +367,7 @@
             max-width: 95%;
         }
         & > * {
-            padding-left: 20px;
+            // padding-left: 20px;
             text-align: center !important;
         }
         .gradient {
