--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -173,29 +173,27 @@
         left: 50%;
         bottom: 20%;
         text-align: center;
-        @include font-heading($size: 1.4rem);
+        text-transform: none !important;
+        @include font-subheading2($size: $font-size-heading, $weight: $font-weight-body);
         transition: opacity 0.5s $ease-inout-expo, transform 0.5s $ease-inout-expo;
         transform: translateX(-50%) translateY(40px);
-        max-height: 178px;
-        line-height: 60px;
-        font-size: 60px;
         text-align: center;
         opacity: 0;
         
 
         small {
-          @include font-heading($size: $font-size-small);
-          margin-bottom: 18px;
           text-transform:none !important;
-          @include media('>=phone') {
-            @include font-heading($size: 0.8rem);
+          @include font-subheading2($size: $font-size-small);
+          margin-bottom: 18px;
+          
+          @include media('<=phone') {
+            @include font-subheading2($size: 0.8rem);
           }
         }
 
         @include media('>=phone') {
           width: 70%;
           bottom: 20%;
-          @include font-heading($size: 2.5rem);
         }
       }
 
@@ -373,6 +371,93 @@
   }
 }
 
+.subtitle-secondary {
+  text-transform: none !important;
+  color: $color-darkpurple;
+  font-weight: 400;
+  @include font-body($size: $font-size-subheading2, $weight: $font-weight-body);
+
+  @include media('<=phone') {
+    @include font-subheading2($size: 1.1rem);
+    line-height: normal !important; 
+  }
+
+  u {
+    color: $color-primary;
+  }
+
+  small {
+    @include font-body($size: $font-size-subheading2, $weight: $font-weight-body);
+    text-transform: none !important;
+    @include media('<=phone') {
+      @include font-subheading2($size: 0.8rem);
+    }
+  }
+
+  span {
+    color: $color-primary;
+  }
+}
+
+.subtitle-upper {
+  text-transform: none !important;
+  color: $color-darkpurple;
+  font-weight: 400;
+  @include font-body($size: $font-size-subheading, $weight: $font-weight-body);
+
+  @include media('<=phone') {
+    @include font-subheading2($size: 1.1rem);
+    line-height: normal !important; 
+  }
+
+  // u {
+  //   color: $color-primary;
+  // }
+
+  small {
+    @include font-body($size: $font-size-subheading2, $weight: $font-weight-body);
+    text-transform: none !important;
+    @include media('<=phone') {
+      @include font-subheading2($size: 0.8rem);
+    }
+  }
+
+  span {
+    color: $color-primary;
+  }
+}
+
+.body-text {
+  text-transform: none !important;
+  font-weight: $font-weight-subheading2;
+  color: $color-darkpurple;
+  @include font-subheading2($size: $font-size-heading);
+  @include media('<=phone') {
+    @include font-subheading2($size: 2rem);
+  }
+
+  div {
+    display: inline-block;
+    background: linear-gradient(132deg, rgba(235,185,242,1) 0%, rgba(246,170,170,1) 55%, rgba(165,102,255,1) 100%);
+    border-radius: 12px;
+    padding:0.1em 0.2em;
+  }
+}
+
+.body-text-inverted-2 {
+  text-transform: none !important;
+  font-weight: $font-weight-subheading2;
+  color: #FFFFFF;
+  @include font-subheading2($size: $font-size-heading);
+  @include media('<=phone') {
+    @include font-subheading2($size: 2rem);
+  }
+}
+
+.timeline {
+  border-left: 1px solid rgba($color: #000000, $alpha: 0.2);
+}
+
 .f-small {
   font-size: 20px;
 }
@@ -478,5 +563,78 @@
     top: -226%;
     left: 0;
     transform: translateX(-50%);
+  }
+}
+
+.text-overlay-container {
+  position: relative;
+}
+
+.text-block-5 {
+  position: absolute;
+  top: 155px;
+  left: 0;
+  right: 0;
+  @include media('<=phone') {
+    top: 40px;
+  }
+}
+
+.img-adjust {
+  width: 100%;
+  @include media('<=phone') {
+    width: 70%;
+  }
+}
+
+.body-text-inverted {
+  text-transform: none !important;
+  font-weight: $font-weight-subheading2;
+  color: $color-secondary;
+  @include font-subheading2($size: $font-size-subheading2);
+  @include media('<=phone') {
+    @include font-subheading2($size: 2rem);
+  }
+
+  small {
+    @include font-subheading2($size: $font-size-small);
+    font-weight: 400;
+    text-transform: none !important;
+    opacity: 0.5;
+    margin-bottom: 20px;
+  }
+
+  span {
+    color: $color-primary;
+  }
+
+  div {
+    opacity: 0.5;
+  }
+}
+
+.btn-primary {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 8px 16px;
+  background: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  border-radius: 50px;
+  height: 42px;
+  color: #A566FF;
+  line-height: 1.9px;
+  font-size: 12px;
+  letter-spacing: 2%;
+
+  img {
+    margin-left: 20px;
+    width: 12.49px !important;
+  }
+
+  &:hover {
+    background: transparent;
+    color: #FFFFFF;
+    border: 1px solid #A566FF;
   }
 }
