--- a/src/views/component/zero/block-two.pug
+++ b/src/views/component/zero/block-two.pug
@@ -1,27 +1,28 @@
-.container
-    .content-wrap.content-2.splitter-container
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                .text-box.enterprise
-                    article.f-larger
-                        span Now, AEMO has a 
-                        span.gradient Digital relationship
-                        span with customer-owned assets
-            .col-lg-6.px-0
-                img(src="/sun-battary.png" alt="Battary")(class="large-sc")
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                img(src="/battary-illustration.png" alt="house")
-            .col-lg-6.px-0
-                .text-box.to-right
-                    h1.f-medium.h-48 permissioned market participants have a shared view of the same underlying assets
-                    h1.f-large.t-start Like smart inverters <br>and batteries
-                    h1.f-medium.h-48 and insight into how and when they can help make the grid more flexible from the bottom up
-        .row.mb-0.bg.col-reversed
-            .col-lg-6.px-0.gray
-                .text-box.flex-no-gaps
-                    //--article.f-large.t-start This simplifies our lives !
-                    h1.f-medium.t-start.h-48.mx-5 This is possible because we and the distribution utilities use common, shared, open source infrastructure rather than each organization using their own siloed systems
-            .col-lg-6.px-0
-                img(src="/electricity.png" alt="house")
-    .border-liner
+.container-full
+    .content-wrap.content-2
+        .container
+            .row.mb-0
+                .col-lg-6.px-0
+                    .text-box
+                        h3.body-text Now, AEMO has a <div>Digital relationship</div> <br> with customer-owned assets
+                .col-lg-6.px-0
+                    img(src="/sun-battary.png" alt="Battary")(class="large-sc")
+        .container            
+            .row.mb-0
+                .col-lg-6.px-0
+                    img(src="/battary-illustration.png" alt="house")
+                .col-lg-6.timeline.px-0
+                    .text-box.to-right.mx-3.mx-lg-0
+                        h4.subtitle-secondary.mb-4 permissioned market participants have a shared view of the same underlying assets
+                        h3.subtitle-upper Like smart inverters <br>and batteries
+                        h4.subtitle-secondary.mt-4 and insight into how and when they can help make the grid more flexible from the bottom up
+        .container-full.row.mb-0.bg.gray.pt-0
+            .content-wrap.content-2
+                .container.px-0
+                    .content-wrap.content-2
+                        .row.col-reversed
+                            .col-lg-6
+                                .text-box.mx-3.mx-lg-0
+                                    h4.subtitle-secondary.mt-4 This is possible because we and the distribution utilities use common, shared, open source infrastructure rather than each organization using their own siloed systems
+                            .col-lg-6.px-0
+                                img(src="/electricity.png" alt="house")
