--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -35,15 +35,15 @@ block App
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h3.slide-title.s-zero.float-sum-img <span class="img-sum"><img src="/SummaryCard_AEMO.png" alt="" /></span><small>I’m Mark and I live near Brisbane, Australia</small> my batteries and solar system are helping to balance the grid instead of a fossil-fuel <br>powered plant
+                  h3.slide-title.s-zero.float-sum-img <small>I’m Mark and I live near Brisbane, Australia</small> my batteries and solar system are helping to balance the grid instead of a fossil-fuel <br>powered plant
                   .slide-overlay
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>Behind the curtain of project EDGE</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span><span class="img"><img src="/aemo-img-companies-1.png" alt="" /></span></span>  <br>and EDGE is giving <br>her the ability...
+                  h3.slide-title.s-zero <small>Behind the curtain of project EDGE</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span></span>  <br>and EDGE is giving <br>her the ability...
                   .slide-overlay
                   img(src="/aemo-companies.png" alt="Companies")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>on the other side of the EDGE marketplace</small> For Molly at <span class="underline aemo-tip"><span>AEMO</span><span class="img"><img src="/aemo-img-companies-2.png" alt="" /></span></span> , she<br> too has a different view of<br> the grid:
+                  h3.slide-title.s-zero <small>on the other side of the EDGE marketplace</small> For Molly at <span class="underline aemo-tip"><span>AEMO</span></span> , she<br> too has a different view of<br> the grid:
                   .slide-overlay
                   img(src="/aemo-enterprise.png" alt="Enterprise")
                 .swiper-slide
