--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -1,27 +1,32 @@
-.container.world-grey-bg
+.container-full
     .content-wrap.content-4
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                article
-                    img(src="/aemo-img-world-1.png" alt="")
-            .col-lg-6.px-0.img-center-box
-                img(src="/world-dots.png" alt="worlds")
-            .border-liner
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                .text-box.world.gray.mt-5
-                    article.f-large.t-start.h-52.mx-3 Reducing the energy required from centralized fossil-fuel based power plants
-            .col-lg-6.px-0.aemo-bg-world-1
-                img(src="/electricity-two.png" alt="electricity-two")
-                img.bg-img(src="/aemo-img-world-2.png" alt="")
-.world-footer
-    img(src="/world-footer-aemo.png", alt="world-footer")
-    .footer-text
-        h1.f-larger.t-center Are you a Grid Operator?
-        h2.f-small.t-center.h-26.text-gray Do you need a way to coordinate distributed energy <br>resource behavior across the transmission / <br>distribution interface?  
-        h3.f-medium.t-center.h-42 Learn how you can BUILD a similar <br>solution with the EW Stack.
-        button
-            span Build with us
-            img(src="/arrow-right.svg", alt="svg")
+        .container
+            .row.mb-0.bg
+                .col-lg-6.px-0
+                    .d-flex.justify-content-start.mx-3.mx-lg-0
+                        .img-adjust
+                            img(src="/aemo-img-world-1.png" alt="")
+                .col-lg-6.px-0
+                    img(src="/world-dots.png" alt="worlds")
+                .border-liner                
+        .container       
+            .row.mb-0.bg
+                .col-lg-6.px-0
+                    .text-box.world.gray.mt-5
+                        article.f-large.t-start.h-52.mx-3.mb-5.mb-lg-0 Reducing the energy required from centralized fossil-fuel based power plants
+                .col-lg-6.px-0.aemo-bg-world-1
+                    img(src="/electricity-two.png" alt="electricity-two")
+                    img.bg-img(src="/aemo-img-world-2.png" alt="")
+        .container-full.text-overlay-container
+            .bg-purple
+                .text-overlay-container.d-flex.align-items-center
+                    .text-block-5.d-flex.align-items-center.justify-content-center.text-center.mx-3.px-0.mx-lg-5.px-lg-5.flex-column
+                        h3.body-text-inverted-2.mb-5 Are you a grid operator?
+                        h3.body-text-inverted.mt-0.mt-lg-0.mx-4.mx-lg-4 <small>Do you need a way to coordinate distributed energy resource behavior <br> across the transmission / distribution interface?</small> Learn how you can BUILD a similar <br>solution with the EW Stack.
+                        a(href='//#')
+                            .btn-primary.mt-5 Build with us 
+                                img(src="/icon-arrow-down.png" alt="arrow icon")
+                .w-100                
+                    img(src="/world-footer-aemo.png", alt="world-footer")         
 
 
