--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -1,26 +1,30 @@
-.container
+.container-full
     .content-wrap.content-1
-        .row.mb-0.bg.gray.pb-5.pt-5.custom-zindex.num-2
-            .col-lg-6.px-0
-                .text-box.a-center
-                    article.f-large.h-48.block-one-t-one ...to see and interact with assets that she was previously blind to:
-            .col-lg-6.px-0
-                .text-box.a-center 
-                    article.f-medium.h-48.block-one-t-two solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
-        .row.mb-0
-            .col-lg-6.px-0
-                img(src="/scooter.png" alt="scooter").block-one-img
-            .col-lg-6.px-0
-                .text-box.to-right.flex-no-gaps
-                    img(src="/block-two-g-1.png", alt="block-gradient").g-sized
-                    article.f-large.mt-3.mx-3 Anchored on the<br> <u>Energy Web Chain</u>
-                    article.f-medium.mt-3.mx-3 we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
-        .row.mb-0.bg.pt-5
-            .col-lg-6.px-0
-                .text-box
-                    article.f-medium.t-end Before we were blind, <br> and now we see
-                    article.f-medium.t-end thanks to the traceability <br> and transparency of the <br> Energy Web stack.
-            .col-lg-6.px-0
-                img(src="/aemo-eye.png" alt="aemo-el")(class="large-sc").to-right
-                img(src="/sm-wider-eye.png" alt="aemo-el")(class="small-sc")
-    .border-liner
+        .container-full.bg.gray.pb-5.pt-5.custom-zindex.num-2
+            .container
+                .row.mb-0
+                    .col-lg-6.px-0
+                        .text-box.a-center.mx-3.mx-lg-0
+                            h3.subtitle-upper ...to see and interact with assets that she was previously blind to:
+                    .col-lg-6.px-0
+                        .text-box.a-center.mx-3.mx-lg-0
+                            h4.subtitle-secondary solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
+        .container
+            .row.mb-0
+                .col-lg-6.px-0
+                    img(src="/scooter.png" alt="scooter").block-one-img
+                .col-lg-6.px-0.timeline 
+                    .text-box.to-right.flex-no-gaps
+                        h3.body-text.my-5 Now that these assets and the companies around them have <div>Digital identities</div> 
+                        h3.subtitle-upper.mb-5 Anchored on the<br> <u>Energy Web Chain</u>
+                        h4.subtitle-secondary we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
+        .container
+            .row.mb-0
+                .col-lg-6.px-0
+                    .text-box
+                        h4.subtitle-secondary Before we were blind, <br> and now we see
+                        h4.subtitle-secondary thanks to the traceability <br> and transparency of the <br> Energy Web stack.
+                .col-lg-6.timeline.px-0
+                    img(src="/aemo-eye.png" alt="aemo-el")(class="large-sc").to-right.pb-5
+                    img(src="/sm-wider-eye.png" alt="aemo-el")(class="small-sc")
+        //- .border-liner
