--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -1,21 +1,22 @@
-.container
+.container-full
     .content-wrap.content-3
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                img(src="/coin-hand.png" alt="aeomo-gradient")
-            .col-lg-6.px-0
-                article.mx-5
-                    span.f-medium.mb-3.d-block Capable of generating and <br>ingesting both data and
-                    img(src="/aemo-img-crypto-1.png" alt="")
-            .border-liner
-        .row.mb-0.bg
-            .col-lg-6.px-0
-                .text-box.flex-no-gaps
-                    article.f-large.t-end After EDGE”s trial period
-                    article.f-medium.t-end.mt-3 the architecture has the<br> potential to set a standard for<br> the entire Australian market and<br> the world.
-            .col-lg-6.px-0.gray.pt-5.pb-5
-                img.mx-5(src="/hexagon-two.png" alt="hexagon-two").sized-image
-            .border-liner
+        .container
+            .row.mb-0
+                .col-lg-6.px-0
+                    img(src="/coin-hand.png" alt="aeomo-gradient")
+                .col-lg-6.timeline.px-4
+                    h4.subtitle-secondary.mb-5 Capable of generating and <br>ingesting both data and
+                    img(src="/aemo-img-crypto-1.png" alt="").mb-5.mb-lg-5
+            //- .border-liner
+        .container    
+            .row.mb-0.pt-0
+                .col-lg-6.px-0
+                    .text-box
+                        h3.subtitle-upper After EDGE”s trial period
+                        h4.subtitle-secondary.mt-4 the architecture has the<br> potential to set a standard for<br> the entire Australian market and<br> the world.
+                .col-lg-6.d-flex.justify-content-center.align-items-center.timeline.px-0.gray.pt-5.pb-5
+                    img.mx-5(src="/hexagon-two.png" alt="hexagon-two").sized-image
+            //- .border-liner
         //--.row.mb-0.bg.gray
             .col-lg-6.px-0
             .col-lg-6.px-0
