modify image to text

--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -3,7 +3,8 @@
         .container
             .row.mb-0.bg
                 .col-lg-6.px-0
-                    .d-flex.justify-content-start.mx-3.mx-lg-0
+                    .d-flex.justify-content-start.flex-column.mx-3.mx-lg-0
+                        h3.body-text.mx-3 Will help to
                         .img-adjust
                             img(src="/aemo-img-world-1.png" alt="")
                 .col-lg-6.px-0
@@ -13,7 +14,7 @@
             .row.mb-0.bg
                 .col-lg-6.px-0
                     .text-box.world.gray.mt-5
-                        article.f-large.t-start.h-52.mx-3.mb-5.mb-lg-0 Reducing the energy required from centralized fossil-fuel based power plants
+                        h3.subtitle-upper.mx-3.mb-5.mb-lg-0 Reducing the energy required from centralized fossil-fuel based power plants
                 .col-lg-6.px-0.aemo-bg-world-1
                     img(src="/electricity-two.png" alt="electricity-two")
                     img.bg-img(src="/aemo-img-world-2.png" alt="")
