--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -5,25 +5,25 @@
                 .row.mb-0
                     .col-lg-6.px-0
                         .text-box.a-center.mx-3.mx-lg-0
-                            h3.subtitle-upper ...to see and interact with assets that she was previously blind to:
+                            h3.subtitle-upper Project EDGE is giving her the ability to interact with customer-owned assets <br> that she was previously <br>blind to: 
                     .col-lg-6.px-0
-                        .text-box.a-center.mx-3.mx-lg-0
-                            h4.subtitle-secondary solar systems, batteries, and other sources of flexible load owned by end customers and operated by aggregators.
+                        .text-box.a-center.mx-3.mx-lg-2
+                            h4.subtitle-secondary solar systems, batteries, and other sources of flexible load, often operated by aggregators.
         .container
             .row.mb-0
                 .col-lg-6.px-0
-                    img(src="/scooter.png" alt="scooter").block-one-img
+                    img(src="/scooter.png" alt="scooter")
                 .col-lg-6.px-0.timeline 
                     .text-box.to-right.flex-no-gaps
-                        h3.body-text.my-5 Now that these assets and the companies around them have <div>Digital identities</div> 
-                        h3.subtitle-upper.mb-5 Anchored on the<br> <u>Energy Web Chain</u>
-                        h4.subtitle-secondary we know where they are, we can <br>communicate with them, and we <br>can rely on them to store or <br>discharge energy to the grid as <br>needed.
+                        h3.body-text.my-5 Now that these assets, customers, and aggregator companies have <div>digital identities</div> 
+                        h3.subtitle-upper.mb-5 anchored on the<br> <u>Energy Web Chain</u>
+                        h4.subtitle-secondary we know <strong>where</strong> they are, <strong>what</strong> they can do, and can <strong>communicate</strong> with them—so that we can <strong>rely</strong> on them to store or discharge energy to the grid as needed, as well as provide other grid services. 
         .container
             .row.mb-0
                 .col-lg-6.px-0
                     .text-box
-                        h4.subtitle-secondary Before we were blind, <br> and now we see
-                        h4.subtitle-secondary thanks to the traceability <br> and transparency of the <br> Energy Web stack.
+                        h4.subtitle-secondary Before we were blind, <br> and now we see 
+                        h4.subtitle-secondary thanks to the traceability <br> and transparency the <br> Energy Web stack enables.
                 .col-lg-6.timeline.px-0
                     img(src="/aemo-eye.png" alt="aemo-el")(class="large-sc").to-right.pb-5
                     img(src="/sm-wider-eye.png" alt="aemo-el")(class="small-sc")
