--- a/src/views/component/zero/block-two.pug
+++ b/src/views/component/zero/block-two.pug
@@ -4,7 +4,7 @@
             .row.mb-0
                 .col-lg-6.px-0
                     .text-box
-                        h3.body-text Now, AEMO has a <div>Digital relationship</div> <br> with customer-owned assets
+                        h3.body-text Now, AEMO has a <div>digital relationship</div> <br> with customer-owned assets
                 .col-lg-6.px-0
                     img(src="/sun-battary.png" alt="Battary")(class="large-sc")
         .container            
@@ -13,9 +13,9 @@
                     img(src="/battary-illustration.png" alt="house")
                 .col-lg-6.timeline.px-0
                     .text-box.to-right.mx-3.mx-lg-0
-                        h4.subtitle-secondary.mb-4 permissioned market participants have a shared view of the same underlying assets
-                        h3.subtitle-upper Like smart inverters <br>and batteries
-                        h4.subtitle-secondary.mt-4 and insight into how and when they can help make the grid more flexible from the bottom up
+                        h4.subtitle-secondary.mb-4 Permissioned market participants—such as aggregators, distribution grid operators, and AEMO—all have a shared view of the same underlying assets
+                        h3.subtitle-upper such as smart inverters <br>and batteries
+                        h4.subtitle-secondary.mt-4 and insight into how and when they can help make the grid more flexible from the bottom up.
         .container-full.row.mb-0.bg.gray.pt-0
             .content-wrap.content-2
                 .container.px-0
@@ -23,6 +23,6 @@
                         .row.col-reversed
                             .col-lg-6
                                 .text-box.mx-3.mx-lg-0
-                                    h4.subtitle-secondary.mt-4 This is possible because we and the distribution utilities use common, shared, open source infrastructure rather than each organization using their own siloed systems
+                                    h4.subtitle-secondary.mt-4 This is possible because AEMO and the distribution utilities use common, shared, open-source infrastructure, rather than each organization using their own siloed systems.
                             .col-lg-6.px-0
                                 img(src="/electricity.png" alt="house")
