--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -35,24 +35,26 @@ block App
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h3.slide-title.s-zero.float-sum-img <small>I’m Mark and I live near Brisbane, Australia</small> my batteries and solar system are helping to balance the grid instead of a fossil-fuel <br>powered plant
+                  h3.slide-title.s-zero.float-sum-img <small>THE CUSTOMER <br>Mark lives near Brisbane, Australia.</small> His batteries and solar PV system are helping to balance the grid...<br> instead of a fossil-fueled powered plant.
                   .slide-overlay
+                    .position-relative
+                      .position-absolute.list-position
+                        img(src="/aemo-list.svg" alt="Aemo")
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>Behind the curtain of project EDGE</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span></span>  <br>and EDGE is giving <br>her the ability...
+                  h3.slide-title.s-zero <small>THE DISTRIBUTION GRID OPERATOR</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span></span>  a regional distribution grid operator in Australia.
                   .slide-overlay
                   img(src="/aemo-companies.png" alt="Companies")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>on the other side of the EDGE marketplace</small> For Molly at <span class="underline aemo-tip"><span>AEMO</span></span> , she<br> too has a different view of<br> the grid:
+                  h3.slide-title.s-zero <small>THE NATIONAL ENERGY MARKET OPERATOR</small> For Molly at <span class="underline aemo-tip"><span>AEMO</span></span> , she<br> too has a different view of<br> the grid:
                   .slide-overlay
                   img(src="/aemo-enterprise.png" alt="Enterprise")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>For the Energy Web Community</small> more and more decentralized identifiers will be anchored to the Energy Web Chain
-                  .slide-overlay
+                  h3.slide-title.s-zero <small>THE ENERGY WEB COMMUNITY</small> More and more decentralized identifiers will be anchored to the Energy Web Chain
                   img(src="/aemo-crypto.png" alt="Crypto")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>For the world</small> all of these batteries, solar systems, <br>and other distributed energy <br>resources
-                  .slide-overlay
+                  h3.slide-title.s-zero <small>FOR THE WORLD</small> All of these batteries, solar PV <br> systems, and other distributed energy resources...
+                  .slide-overlay 
                   img(src="/aemo-world.png" alt="World")
               .swiper-pagination
       section#content
