--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -4,7 +4,7 @@
             .row.mb-0.bg
                 .col-lg-6.px-0
                     .text-box.justify-content-start 
-                        h4.subtitle-secondary.px-3 When a solar company sold me panels for my house, they also sold me a battery. It’s been sitting in my basement for two years not doing a whole lot.
+                        h4.subtitle-secondary.px-3 When a solar company sold him rooftop panels for his house, they also sold him a battery. It’s been sitting in his basement for two years, not doing much.
                         //- img.auto-size(src="/aemo-gradient-indis.png" alt="aemo gradient text")
                 .col-lg-6.px-0
                     img(src="/battaries.png" alt="Battaries")
@@ -15,17 +15,18 @@
                         .row    
                             .col-lg-6
                                 .text-box
-                                    h4.subtitle-secondary.mb-4  Now with Project EDGE, My solar system and battery are being used by different utilities to help balance the grid 
-                                    h3.body-text And they’re <u>Paying me</u> to do it!
+                                    h4.subtitle-secondary.mb-4  Now with Project EDGE, several utilities are using Mark’s solar PV system and battery to help balance the grid...
+                                    h3.body-text And they’re <u>Paying him</u> to do it!
                             .col-lg-6.px-0
-                                img(src="/block-one-house.png" alt="house")
+                                img(src="/block-1-house.svg" alt="house")
         .container
             .content-wrap.content-0                
                 .row.mb-0.col-reversed
                     .col-lg-6
-                        img(src="/hexagon.png" alt="house")
+                        img(src="/hexagon.svg" alt="hexagon")
                     .col-lg-6.px-0
                         .text-box.to-right.s-t-center
-                            h4.subtitle-secondary and I'm helping to
+                            h4.subtitle-secondary He’s also helping to
                             h3.body-text <u>Decarbonize the grid</u>
+                            h4.subtitle-secondary.mt-2 and support a clean energy future.
                             //--article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
