modify highlighted text

--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -11,17 +11,17 @@
                             h4.subtitle-secondary solar systems, batteries, and other sources of flexible load, often operated by aggregators.
         .container
             .row.mb-0
-                .col-lg-6.px-0
+                .col-lg-6.px-0.mt-0.mt-lg-auto
                     img(src="/scooter.png" alt="scooter")
                 .col-lg-6.px-0.timeline 
-                    .text-box.to-right.flex-no-gaps
+                    .text-box.to-right.flex-no-gaps.mx-3.mx-lg-0
                         h3.body-text.my-5 Now that these assets, customers, and aggregator companies have <div>digital identities</div> 
                         h3.subtitle-upper.mb-5 anchored on the<br> <u>Energy Web Chain</u>
                         h4.subtitle-secondary we know <strong>where</strong> they are, <strong>what</strong> they can do, and can <strong>communicate</strong> with them—so that we can <strong>rely</strong> on them to store or discharge energy to the grid as needed, as well as provide other grid services. 
         .container
             .row.mb-0
                 .col-lg-6.px-0
-                    .text-box
+                    .text-box.mx-3.mx-lg-0
                         h4.subtitle-secondary Before we were blind, <br> and now we see 
                         h4.subtitle-secondary thanks to the traceability <br> and transparency the <br> Energy Web stack enables.
                 .col-lg-6.timeline.px-0
