--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -24,7 +24,7 @@
                 .row.mb-0.col-reversed
                     .col-lg-6
                         img(src="/hexagon.svg" alt="hexagon")
-                    .col-lg-6.px-0
+                    .col-lg-6.mt-0.mt-lg-auto.px-0
                         .text-box.to-right.s-t-center
                             h4.subtitle-secondary He’s also helping to
                             h3.body-text <u>Decarbonize the grid</u>
