--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -393,6 +393,13 @@
     color: $color-primary;
   }
 
+  br {
+    display: initial;
+    @include media('<=phone') {
+      display: none;
+    }
+  }
+
   strong {
     font-weight: 600;
   }
@@ -669,3 +676,30 @@
     border: 1px solid #A566FF;
   }
 }
+
+.svg-transform-1 {
+  @include media('<=phone') {
+    -webkit-transform: scale(0.55);
+    transform: scale(0.55);
+    -webkit-transform-origin: 0%;
+    transform-origin: 0%;
+  }
+}
+
+.svg-transform-2 {
+  position: initial;
+  @include media('<=phone') {
+    position: relative;
+    top: -30px;
+    left: 10px;
+    -webkit-transform: scale(0.55);
+    transform: scale(0.55);
+    -webkit-transform-origin: 0%;
+    transform-origin: 0%;
+  }
+}
+
+.h-100 {
+  height: 100%;
+}
+
