--- a/src/views/component/zero/block-two.pug
+++ b/src/views/component/zero/block-two.pug
@@ -11,7 +11,7 @@
             .row.mb-0
                 .col-lg-6.px-0
                     img(src="/battary-illustration.png" alt="house")
-                .col-lg-6.timeline.px-0
+                .col-lg-6.timeline.px-0.py-4.py-lg-0
                     .text-box.to-right.mx-3.mx-lg-0
                         h4.subtitle-secondary.mb-4 Permissioned market participants—such as aggregators, distribution grid operators, and AEMO—all have a shared view of the same underlying assets
                         h3.subtitle-upper such as smart inverters <br>and batteries
@@ -22,7 +22,7 @@
                     .content-wrap.content-2
                         .row.col-reversed
                             .col-lg-6
-                                .text-box.mx-3.mx-lg-0
+                                .text-box.mx-3.mx-lg-0.pb-5.pb-lg-0
                                     h4.subtitle-secondary.mt-4 This is possible because AEMO and the distribution utilities use common, shared, open-source infrastructure, rather than each organization using their own siloed systems.
                             .col-lg-6.px-0
                                 img(src="/electricity.png" alt="house")
